2004-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* startup.c: Rewritten to match new startup data format.
	* wortel.c: Include <hurd/startup.h>.
	(start_task): Large chunks rewritten to match new
	startup data format.
	
2004-10-20  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c: Include "startup.h".
	(STARTUP_CODE_SIZE_LOG2, STARTUP_CODE_SIZE): Do not
	define.
	(setup_components): Use HURD_STARTUP_SIZE_LOG2 instead
	STARTUP_CODE_SIZE_LOG2.

	* startup.c (cmain): Include "startup.h" and use the
	HURD_STARTUP_FPAGE_SIZE and HURD_STARTUP_FPAGE_ADDR constants
	instead of hard-coded numbers.
	(struct map_item): Remove struct.

2004-10-07  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (find_components): Add one to size argument to
	ADD_UNUSED_AREA.
	Submitted by Bas Wijnen <b.wijnen@phys.rug.nl>.

2004-04-26  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c: Include wortel-intern.h, not wortel.h.  Include
	<hurd/wortel.h>.
	(start_physmem): Change type of cap_id to wortel_cap_id_t.
	(serve_bootstrap_requests): Rewritten for new RPC interface.
	* wortel.h: Rename to ...
	* wortel-intern.h: ... this.
	* ia32-cmain.c: Include wortel-intern.h, not wortel.h.
	* startup.c: Likewise.
	* wortel.h: New file.
	* headers.m4: New file.

2004-04-15  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (startup-bin.o): Add dependency on startup.
	* startup.c (struct map_item): New struct.
	(physmem_map): New function.
	(cmain): Add new arguments argc, argv, mapc, mapv.
	Request mappings for all map items.  Do not call wortel.
	* wortel.c: Include "elf.h".
	(start_task): Rewritten.
	(serve_bootstrap_requests): Zero out the unused part of the last
	page in the data of every container.  Pass fpages in correct order.

2004-04-11  Marco Gerards  <metgerards@student.han.nl>

	* wortel.c (serve_requests): Initialize from specifier.

2004-04-11  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (serve_bootstrap_requests): Initialize from specifier.
	Reported by Marco Gerards.
